feat: initialize pillarbox web suite with plugin scaffolding
Sets up the foundational structure for the Pillarbox Web Suite, providing an npm workspace with
customizable plugins for pillarbox-web. Key features include:

- Configured `package.json` with necessary dependencies and workspace definitions for plugins.
- Included scripts for creating plugins (`create:plugin`) leveraging plop configurations.
- Set up ESLint and StyleLint for code quality, and Jest for testing.
- Integrated Rollup and Babel for building plugins.
- Utilized Husky to enforce linting pre-commits to maintain conventional commits standard.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ jspm_packages/
 # Optional stylelint cache
 .stylelintcache
 
+# Parcel cache
+.parcel-cache
+
 # Output of 'npm pack'
 *.tgz
 
@@ -44,6 +47,7 @@ jspm_packages/
 
 # Generated output
 dist
+coverage
 
 # Intellij
 .idea
