feat: add skip button plugin
Introduces the skip button plugin, providing a convenient option to skip segments of a video. Key
features include:

- Detection of skippable segments, such as opening intros and closing credits, through
  the `srgssr/interval` event from the Pillarbox player.
- Multilingual support with translations in French, Italian, English, German, and Romansh.

Example of integration:

```javascript
import Pillarbox from '@srgssr/pillarbox-web';
import '@srgssr/skip-button-plugin';

const player = new Pillarbox('my-player', { plugins: { 'skip-button-plugin': true } });
player.src({
  src: 'urn:swi:video:48115940',
  type: 'srgssr/urn'
});
```

--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -1,15 +1,13 @@
-name: Quality
+name: Github Page
 
 on:
-  merge_group:
-  pull_request:
+  push:
     branches:
       - main
 
 jobs:
-  quality:
+  github-page:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,20 +22,23 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+
       - name: Install dependencies
-        env:
+        env :
           CI: true
         run: |
           npm pkg delete scripts.prepare
           npm ci
 
-      - name: Run JS and CSS linters
+      - name: Run build Github Page
         run: |
-          npm run eslint && npm run stylelint
+          npm run github:page
 
-      - name: Run unit tests
-        run: |
-          npm test
-
-      - name: Coverage
-        uses: ArtiomTr/jest-coverage-report-action@v2
+      - name: Deploy GitHub Page 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          branch: gh-pages
+          folder: dist
+          force: false
+          clean-exclude: pr-preview/
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
