--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   ],
   "scripts": {
     "create:plugin": "plop --plopfile scripts/create-plugin.js",
-    "eslint": "eslint {plugins/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}\n",
+    "eslint": "eslint {plugins/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}",
     "outdated": "npm outdated",
     "prepare": "husky",
     "stylelint": "stylelint **/*.{css,scss} --allow-empty-input",
     "stylelint:fix": "stylelint **/*.{css,scss} --fix",
+    "github:page": "npm run github:page --ws && node scripts/prepare-deployment.js",
     "test": "jest"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@babel/preset-env": "^7.24.1",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@parcel/transformer-sass": "^2.12.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -44,6 +46,7 @@
     "plop": "^4.0.1",
     "rollup": "^4.9.6",
     "rollup-plugin-filesize": "^10.0.0",
+    "sass": "^1.75.0",
     "stylelint": "^16.3.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.0",
