--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "stylelint": "stylelint **/*.{css,scss} --allow-empty-input",
     "stylelint:fix": "stylelint **/*.{css,scss} --fix",
     "github:page": "npm run github:page --ws && node scripts/prepare-deployment.js",
-    "test": "jest"
+    "test": "vitest run --coverage --reporter=verbose --silent"
   },
   "devDependencies": {
     "@babel/core": "^7.24.1",
@@ -32,16 +32,15 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "babel-jest": "^29.7.0",
+    "@vitest/coverage-v8": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vitest": "^0.4.1",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.6.1",
+    "jsdom": "^24.0.0",
     "parcel": "^2.12.0",
     "plop": "^4.0.1",
     "rollup": "^4.9.6",
@@ -51,6 +50,7 @@
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "stylelint-order": "^6.0.4"
+    "stylelint-order": "^6.0.4",
+    "vitest": "^1.5.0"
   }
 }
