--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@parcel/transformer-sass": "^2.12.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@vitest/coverage-v8": "^1.5.0",
