feat: add element type prompt and adapt templates
- Added a new prompt in the `create` script to enable users to specify whether they want to generate
  a new component, plugin, or button.
- Adapted the existing templates to correctly produce the type of element selected by the user.
- Migrated the functionality of the skip-button-plugin into a simpler component format.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "themes/*"
   ],
   "scripts": {
-    "create:plugin": "plop --plopfile scripts/create-plugin.js",
+    "create": "plop --plopfile scripts/create.js",
     "eslint": "eslint {plugins/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}",
     "outdated": "npm outdated",
     "prepare": "husky",
