--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@parcel/transformer-sass": "^2.12.0",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
     "@vitest/coverage-v8": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
@@ -44,14 +40,13 @@
     "jsdom": "^24.0.0",
     "parcel": "^2.12.0",
     "plop": "^4.0.1",
-    "rollup": "^4.9.6",
-    "rollup-plugin-filesize": "^10.0.0",
     "sass": "^1.75.0",
     "stylelint": "^16.3.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
+    "vite": "^5.2.10",
     "vitest": "^1.5.0"
   }
 }
