refactor: rename plugins folder
Renames the `plugins` folder to `packages`:

- Adapted `create` and `preapre-deploymet` scripts.
- Adaped workspace configuration for npm, eslint and vitest.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   "overrides": [
     {
       "files": [
-        "plugins/**/test/**"
+        "packages/**/test/**"
       ],
       "plugins": [
         "vitest"
