feat(playlist): add optional ui for the playlist plugin
Resolves #8 by adding an optional a modal that contains a simple playlist with controls such as
enable/disable repeat, previous and next buttons, and the ability to select items from the list
directly.

***How to Activate the UI***

To activate the optional UI for the playlist plugin, you need to add the `PillarboxPlaylistButton`
to the control bar of your Video.js player. Here’s an example:

```javascript
import videojs from 'video.js';
import '@srgssr/pillarbox-playlist';
import '@srgssr/pillarbox-playlist/ui';

// Initialize the Video.js player
const player = videojs('my-video', {
  plugins: {
    pillarboxPlaylist: { autoadvance: true, repeat: true },
      // Add the PillarboxPlaylistButton just before the fullscreenToggle button
    pillarboxPlaylistUI: { insertChildBefore: 'fullscreenToggle' }
  }
});

// Define your video sources
const playlist = [
  {
    sources: [{ src: 'https://www.w3schools.com/html/mov_bbb.mp4', type: 'video/mp4' }],
    data: { title: 'Big Buck Bunny', duration: 10 }
  },
  {
    sources: [{ src: 'https://www.w3schools.com/html/movie.mp4', type: 'video/mp4' }],
    data: { title: 'Sample Video', duration: 12 }
  }
];

// Load the playlist into the player
player.pillarboxPlaylist().load(playlist);
```

- Converted the plugin to be a pure video.js plugin. Initially intended as a pillarbox plugin, it
  was decided that any interaction with our business core logic can be handled outside of the
  plugin, e.g.:
  ```javascript
  import { default as pillarbox, SrgSsr} from '@srgssr/pillarbox-web';

  const player = pillarbox('player', { plugins: { pillarboxPlaylist: true } });

  const sources = [
    'urn:rts:video:14827742',
    'urn:rts:video:9883196',
  ];

  Promise.all(sources.map(async urn => {
    const mediaComposition = await SrgSsr.getMediaComposition(urn, SrgSsr.dataProvider(player));
    const mainChapter = mediaComposition.getMainChapter();

    return {
      sources: [{ 

--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -9,13 +9,17 @@
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/pillarbox-playlist",
   "type": "module",
-  "main": "dist/pillarbox-playlist.cjs.js",
-  "module": "dist/pillarbox-playlist.es.js",
+  "main": "dist/pillarbox-playlist.cjs",
+  "module": "dist/pillarbox-playlist.js",
   "style": "./dist/pillarbox-playlist.min.css",
   "exports": {
     ".": {
-      "import": "./dist/pillarbox-playlist.es.js",
-      "require": "./dist/pillarbox-playlist.cjs.js"
+      "import": "./dist/pillarbox-playlist.js",
+      "require": "./dist/pillarbox-playlist.cjs"
+    },
+    "./ui": {
+      "import": "./dist/ui/pillarbox-playlist-ui.js",
+      "require": "./dist/ui/pillarbox-playlist-ui.cjs"
     },
     "./*": "./*"
   },
@@ -31,14 +35,18 @@
     "playlist"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:css",
+    "build": "npm run build:lib && npm run build:ui && npm run build:css",
     "build:css": "sass ./scss/pillarbox-playlist.scss:dist/pillarbox-playlist.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
+    "build:ui": "vite build --config vite.config.ui.js",
     "github:page": "vite build",
     "start": " vite --port 4200 --open",
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
   "peerDependencies": {
+    "video.js": "^8.0.0"
+  },
+  "devDependencies": {
     "@srgssr/pillarbox-web": "^1.12.1"
   }
 }
