--- a/packages/skip-button/package.json
+++ b/packages/skip-button/package.json
@@ -9,13 +9,13 @@
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/skip-button",
   "type": "module",
-  "main": "dist/skip-button.cjs.js",
-  "module": "dist/skip-button.es.js",
+  "main": "dist/skip-button.cjs",
+  "module": "dist/skip-button.js",
   "style": "./dist/skip-button.min.css",
   "exports": {
     ".": {
-      "import": "./dist/skip-button.es.js",
-      "require": "./dist/skip-button.cjs.js"
+      "import": "./dist/skip-button.js",
+      "require": "./dist/skip-button.cjs"
     },
     "./*": "./*"
   },
@@ -34,6 +34,7 @@
     "build": "npm run build:lib && npm run build:css",
     "build:css": "sass ./scss/skip-button.scss:dist/skip-button.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
+    "build:ui": "vite build --config vite.config.ui.js",
     "github:page": "vite build",
     "start": " vite --port 4200 --open",
     "test": "vitest run --silent --coverage --coverage.reporter text"
