chore: enhance create script and add tests
- Added a `platform` prompt to the creation script to specify if the element targets video.js or
  pillarbox. Templates have been adapted based on the platform answer.
- Included tests for the `create` script, which will execute in the CI only when changes are
  detected in the scripts folder.
- Added keywords in the template and all existing packages.

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -41,3 +41,17 @@ jobs:
 
       - name: Report Coverage
         uses: davelosert/vitest-coverage-report-action@v2
+
+      - name: Filter changes in scripts folder
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            scripts:
+              - 'scripts/**'
+
+      - name: Run create tests if scripts folder changed
+        if: steps.filter.outputs.scripts == 'true'
+        run: |
+          echo "Changes detected in scripts folder."
+          npm run test:create
