--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   "overrides": [
     {
       "files": [
-        "packages/**/test/**"
+        "packages/**/test/**",
+        "scripts/**/test/**"
       ],
       "plugins": [
         "vitest"
