--- a/packages/skip-button/package.json
+++ b/packages/skip-button/package.json
@@ -1,6 +1,13 @@
 {
   "name": "@srgssr/skip-button",
+  "description": "A button to skip certain parts of the content, such as opening credits or end credits",
   "version": "0.0.1",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
+  },
+  "homepage": "https://srgssr.github.io/pillarbox-web-suite/skip-button",
   "type": "module",
   "main": "dist/skip-button.cjs.js",
   "module": "dist/skip-button.es.js",
@@ -15,6 +22,13 @@
   "files": [
     "dist/*",
     "scss/*"
+  ],
+  "keywords": [
+    "video.js",
+    "player",
+    "pillarbox",
+    "pillarbox-plugin",
+    "skip-button"
   ],
   "scripts": {
     "build": "npm run build:lib && npm run build:css",
