--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
+    "url": "git@github.com:jboix/pillarbox-web-suite.git"
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite",
   "type": "module",
@@ -40,10 +40,15 @@
     "eslint-plugin-vitest": "^0.4.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
+    "node-plop": "^0.32.0",
     "parcel": "^2.12.0",
     "plop": "^4.0.1",
-    "node-plop": "^0.32.0",
     "sass": "^1.75.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.5",
+    "semantic-release": "^23.1.1",
+    "semantic-release-monorepo": "^8.0.2",
     "stylelint": "^16.3.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.0",
