--- a/packages/skip-button/package.json
+++ b/packages/skip-button/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
+    "url": "git@github.com:jboix/pillarbox-web-suite.git"
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/skip-button",
   "type": "module",
