feat: test releasing only 1 package

--- a/packages/skip-button/.releaserc
+++ b/packages/skip-button/.releaserc
@@ -109,12 +109,10 @@
       {
         "assets": [
           {
-            "path": "dist/**/*",
-            "label": "Distribution"
+            "path": "dist/**/*"
           },
           {
-            "path": "CHANGELOG.md",
-            "label": "Changelog"
+            "path": "CHANGELOG.md"
           }
         ]
       }
