--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@parcel/transformer-sass": "^2.12.0",
     "@rollup/plugin-babel": "^6.0.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^12.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.5",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^13.0.0",
     "@vitest/coverage-v8": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
@@ -40,10 +46,11 @@
     "eslint-plugin-vitest": "^0.4.1",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
+    "node-plop": "^0.32.0",
     "parcel": "^2.12.0",
     "plop": "^4.0.1",
-    "node-plop": "^0.32.0",
     "sass": "^1.75.0",
+    "semantic-release": "^23.1.1",
     "stylelint": "^16.3.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^36.0.0",
