--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite/pillarbox-playlist",
   "type": "module",
   "main": "dist/pillarbox-playlist.cjs",
@@ -40,6 +43,7 @@
     "build:lib": "vite build --config vite.config.lib.js",
     "build:ui": "vite build --config vite.config.ui.js",
     "github:page": "vite build",
+    "release:ci": "semantic-release",
     "start": " vite --port 4200 --open",
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
