--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-plop": "^0.32.0",
     "parcel": "^2.12.0",
     "plop": "^4.0.1",
+    "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.75.0",
     "semantic-release": "^23.1.1",
     "semantic-release-monorepo": "^8.0.2",
