fix: publish pillarbox-suite to npm
Automated the process of publishing pillarbox-suite packages to npm by updating necessary
configurations and workflows.

Changes include:

- Updated GitHub Actions workflows to automate the publishing process to npm.
- Modified package.json files to ensure correct npm configuration.
- Added a LICENSE file to each package and updated the `create` script to automatically include one.

--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "description": "A suite of plugins and themes for pillarbox-web",
   "version": "0.0.1",
   "license": "MIT",
+  "author": "SRG SSR",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SRGSSR/pillarbox-web-suite.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "homepage": "https://srgssr.github.io/pillarbox-web-suite",
   "type": "module",
