--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,11 +23,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          always-auth: true
-          registry-url: https://npm.pkg.github.com/
-          scope: '@srgssr'
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
         env :
@@ -45,4 +40,4 @@ jobs:
         run: npm run release:ci -ws
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
