docs: changed homepage in package json
- Makes the homepage point to the readme file in github for each individual
  package instead of the demo page for better discoverability.
- Fixes links to contributing guidelines.

--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -11,7 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://srgssr.github.io/pillarbox-web-suite/pillarbox-playlist",
+  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/pillarbox-playlist#readme",
   "type": "module",
   "main": "dist/pillarbox-playlist.cjs",
   "module": "dist/pillarbox-playlist.js",
