chore: streamline project startup and deployment process
Resolves #15 by making it easier to develop and deploy the project with a single command from the
root directory.

- Simplify the prepare script to copy necessary files.
- Add a root-level index.html to ensure Vite serves the correct page when running `npm run start`.
- Enhance the `github:page` script to build with vite before preparing the deployment.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "create": "plop --plopfile scripts/create.js",
     "eslint": "eslint {packages/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}",
-    "github:page": "npm run github:page --ws && node scripts/prepare-deployment.js",
+    "github:page": "npm run github:page --ws && vite build && node scripts/prepare-deployment.js",
+    "start": " vite --port 4200 --open",
     "outdated": "npm outdated",
     "prepare": "husky",
     "stylelint": "stylelint **/*.{css,scss} --allow-empty-input",
