feat(pillarbox-debug-panel): debug panel component for playback metrics
Introduces a debug panel that provides real-time playback metrics for enhanced monitoring and
debugging of the video player.

This panel can be added to the player interface only when necessary, allowing developers to keep
track of key playback statistics during video streaming.

To integrate the debug panel into the player:

```javascript
import videojs from 'video.js';
import '@srgssr/pillarbox-debug-panel';

const player = videojs('my-player', { pillarboxDebugPanel: true });
```

Changes:

- Implemented a debug panel displaying metrics such as buffer size, media duration, playback
  position, bandwidth, bitrate, codecs, framerate, total frames, dropped frames, resolution, and
  timestamp.
- Added a canvas element to the panel for visualizing the evolution of buffer health, bitrate, and
  bandwidth.
- Used VHS API for data retrieval when supported, and native APIs for browsers utilizing native
  video playback (such as HLS in Safari).

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "create": "plop --plopfile scripts/create.js",
     "eslint": "eslint {packages/**/{src,test}/**/*.{js,jsx},scripts/*.{js,jsx}}",
     "github:page": "npm run github:page --ws && vite build && node scripts/prepare-deployment.js",
-    "start": " vite --port 4200 --open",
+    "start": " vite --host --port 4200 --open",
     "outdated": "npm outdated",
     "prepare": "husky",
     "stylelint": "stylelint **/*.{css,scss} --allow-empty-input",
@@ -36,6 +36,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@parcel/transformer-sass": "^2.12.0",
     "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^12.0.0",
     "@semantic-release/git": "^10.0.1",
@@ -60,8 +61,7 @@
     "semantic-release-monorepo": "^8.0.2",
     "stylelint": "^16.3.1",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-order": "^6.0.4",
     "vite": "^5.2.10",
     "vitest": "^1.5.0"
