--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "test:create": "vitest run --config scripts/vitest.scripts.config.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.1",
-    "@babel/preset-env": "^7.24.1",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
-    "@parcel/transformer-sass": "^2.12.0",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.13.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@semantic-release/changelog": "^6.0.3",
@@ -43,27 +44,23 @@
     "@semantic-release/github": "^10.0.5",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^13.0.0",
-    "@vitest/coverage-v8": "^1.5.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vitest": "^0.4.1",
-    "husky": "^9.0.11",
-    "jsdom": "^24.0.0",
+    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/eslint-plugin": "^1.1.7",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
     "node-plop": "^0.32.0",
-    "parcel": "^2.12.0",
     "plop": "^4.0.1",
     "rollup-plugin-copy": "^3.5.0",
-    "sass": "^1.75.0",
+    "sass": "^1.80.3",
     "semantic-release": "^23.1.1",
     "semantic-release-monorepo": "^8.0.2",
-    "stylelint": "^16.3.1",
+    "stylelint": "^16.10.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-order": "^6.0.4",
-    "vite": "^5.2.10",
-    "vitest": "^1.5.0"
+    "vite": "^5.4.10",
+    "vitest": "^2.1.3"
   }
 }
