feat(user-preferences): add UMD build configuration
By adding the UMD build configuration, developers will be able to use this
component directly from the CDN without having to rely on JavaScript runtime.

- add a Vite configuration file to generate a UMD module
- update the build script to include the generation of the UMD module

--- a/packages/user-preferences/package.json
+++ b/packages/user-preferences/package.json
@@ -12,6 +12,7 @@
   },
   "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/user-preferences#readme",
   "type": "module",
+  "browser":"dist/user-preferences.umd.min.js",
   "main": "dist/user-preferences.cjs",
   "module": "dist/user-preferences.js",
   "exports": {
@@ -29,8 +30,9 @@
     "player"
   ],
   "scripts": {
-    "build": "npm run build:lib",
+    "build": "npm run build:lib && npm run build:umd",
     "build:lib": "vite build --config vite.config.lib.js",
+    "build:umd": "vite build --config vite.config.umd.js",
     "github:page": "vite build",
     "release:ci": "semantic-release",
     "start": " vite --port 4200 --open",
