--- a/packages/pillarbox-playlist/package.json
+++ b/packages/pillarbox-playlist/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/pillarbox-playlist#readme",
   "type": "module",
   "main": "dist/pillarbox-playlist.cjs",
+  "browser": "dist/pillarbox-playlist.umd.min.js",
   "module": "dist/pillarbox-playlist.js",
   "style": "./dist/pillarbox-playlist.min.css",
   "exports": {
@@ -39,9 +40,11 @@
     "playlist"
   ],
   "scripts": {
-    "build": "npm run build:lib && npm run build:ui && npm run build:css",
+    "build": "npm run build:lib && npm run build:ui && npm run build:umd && npm run build:umd:ui && npm run build:css",
     "build:css": "sass ./scss/pillarbox-playlist.scss:dist/pillarbox-playlist.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
+    "build:umd": "vite build --config vite.config.umd.js",
+    "build:umd:ui": "vite build --config vite.config.umd.ui.js",
     "build:ui": "vite build --config vite.config.ui.js",
     "github:page": "vite build",
     "release:ci": "semantic-release",
