chore: update devDependencies and fix local video.js resolution
- Updated development and testing dependencies to their latest compatible versions.
- Added a static devDependency for video.js to ensure consistent local resolution and avoid version
  conflicts during the build process. No changes to production dependencies.

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "test:create": "vitest run --config scripts/vitest.scripts.config.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.9",
-    "@babel/preset-env": "^7.25.9",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.13.0",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.1",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@semantic-release/changelog": "^6.0.3",
@@ -44,23 +44,24 @@
     "@semantic-release/github": "^10.0.5",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^13.0.0",
-    "@vitest/coverage-v8": "^2.1.3",
-    "@vitest/eslint-plugin": "^1.1.7",
-    "eslint": "^9.13.0",
-    "globals": "^15.11.0",
-    "husky": "^9.1.6",
-    "jsdom": "^25.0.1",
+    "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/eslint-plugin": "^1.1.44",
+    "eslint": "^9.26.0",
+    "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "node-plop": "^0.32.0",
     "plop": "^4.0.1",
     "rollup-plugin-copy": "^3.5.0",
-    "sass": "^1.80.3",
+    "sass": "^1.87.0",
     "semantic-release": "^23.1.1",
     "semantic-release-monorepo": "^8.0.2",
-    "stylelint": "^16.10.0",
+    "stylelint": "^16.19.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-scss": "^14.1.0",
-    "stylelint-order": "^6.0.4",
-    "vite": "^5.4.10",
-    "vitest": "^2.1.3"
+    "stylelint-order": "^6.0.4  ",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.2",
+    "video.js": "8.21.0"
   }
 }
