fix: chapters-bar build not working
- Fixed naming of several files from `chapeter-bar` to `chapters-bar`.
- Added `video.js` as an external dependency in `chatpters-bar`.
- Import `card` as a dependency in the `chapters-bar` component.
- Added build step in `quality` action to better detect bild failure before merging.

--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -17,13 +17,16 @@ jobs:
         with:
           node-version: 20
 
-
       - name: Install dependencies
-        env :
+        env:
           CI: true
         run: |
           npm pkg delete scripts.prepare
           npm ci
+
+      - name: Run Build
+        run: |
+          npm run build -ws
 
       - name: Run build Github Page
         run: |
