--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -30,6 +30,10 @@ jobs:
         run: |
           npm run eslint && npm run stylelint
 
+      - name: Run Build
+        run: |
+          npm run build -ws
+
       - name: Run unit tests
         run: |
           npm test
