feat: create web-suite-utils package and extract loadSvgElement from brand-button
Introduces a new package `@srgssr/web-suite-utils` to hold common utility code shared across
pillarbox-web-suite components.

The `loadSvgElement` function has been moved out of the `brand-button` component into this new
shared module, as it can be reused by other components that rely on dynamic SVG loading.

--- a/packages/brand-button/package.json
+++ b/packages/brand-button/package.json
@@ -41,6 +41,9 @@
     "start": " vite --port 4200 --open",
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
+  "dependencies": {
+    "@srgssr/web-suite-utils": "^1.0.0"
+  },
   "peerDependencies": {
     "video.js": "^8.0.0"
   },
