feat(airplay-button): introduces a new airplay button component
Resolves #68 by adding a new AirPlayButton component.

The implementation is based on the AirPlay support from the legacy Letterbox player, with one key
difference: The button now handle the "not-available" state of the
`webkitplaybacktargetavailabilitychanged` event.

This component is only functional in Safari browsers, as it relies on the non-standard `webkit` API.

--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -34,5 +34,9 @@
   {
     "name": "chapters-bar",
     "description": "Displays a scrollable list of video chapters, allowing users to easily navigate through the content."
+  },
+  {
+    "name": "airplay-button",
+    "description": "Adds an AirPlay button when AirPlay is available, and opens the system picker on click."
   }
 ]
