feat: add reusable svg button component and refactor existing buttons
Resolves #72 by introducing `SvgButton` and `SvgComponent` base classes for Video.js to simplify
adding custom SVG icons to the player UI. These components accept multiple icon input formats (
SVGElement, raw SVG string, URL) and can also integrate with Video.js’s experimental SVG icon system
and icon fonts.

- Refactored `AirplayButton` to use `SvgButton` internally.
- Refactored `BrandButton` to use `SvgComponent` internally.

--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -38,5 +38,9 @@
   {
     "name": "airplay-button",
     "description": "Adds an AirPlay button when AirPlay is available, and opens the system picker on click."
+  },
+  {
+    "name": "svg-button",
+    "description": "Base components that simplifies the process of adding custom SVG icons."
   }
 ]
