--- a/packages/airplay-button/package.json
+++ b/packages/airplay-button/package.json
@@ -43,7 +43,7 @@
     "test": "vitest run --silent --coverage --coverage.reporter text"
   },
   "dependencies": {
-    "@srgssr/web-suite-utils": "^1.0.0"
+    "@srgssr/svg-button": "^1.0.0"
   },
   "peerDependencies": {
     "video.js": "^8.0.0"
