--- a/packages/svg-button/package.json
+++ b/packages/svg-button/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@srgssr/brand-button",
-  "version": "1.1.0",
+  "name": "@srgssr/svg-button",
+  "version": "1.0.0",
   "license": "MIT",
   "author": "SRG SSR",
   "repository": {
@@ -10,16 +10,16 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/brand-button#readme",
+  "homepage": "https://github.com/SRGSSR/pillarbox-web-suite/tree/main/packages/svg-button#readme",
   "type": "module",
-  "main": "dist/brand-button.cjs",
-  "browser": "dist/brand-button.umd.min.js",
-  "module": "dist/brand-button.js",
-  "style": "./dist/brand-button.min.css",
+  "main": "dist/svg-button.cjs",
+  "browser": "dist/svg-button.umd.min.js",
+  "module": "dist/svg-button.js",
+  "style": "./dist/svg-button.min.css",
   "exports": {
     ".": {
-      "import": "./dist/brand-button.js",
-      "require": "./dist/brand-button.cjs"
+      "import": "./dist/svg-button.js",
+      "require": "./dist/svg-button.cjs"
     },
     "./*": "./*"
   },
@@ -33,16 +33,16 @@
   ],
   "scripts": {
     "build": "npm run build:lib && npm run build:umd && npm run build:css",
-    "build:css": "sass ./scss/brand-button.scss:dist/brand-button.min.css --style compressed --source-map --load-path node_modules",
+    "build:css": "sass ./scss/svg-button.scss:dist/svg-button.min.css --style compressed --source-map --load-path node_modules",
     "build:lib": "vite build --config vite.config.lib.js",
     "build:umd": "vite build --config vite.config.umd.js",
     "github:page": "vite build",
     "release:ci": "semantic-release",
     "start": " vite --port 4200 --open",
-    "test": "vitest run --silent --coverage --coverage.reporter text"
+    "test": "vitest run --coverage --coverage.reporter text"
   },
   "dependencies": {
-    "@srgssr/svg-button": "^1.0.0"
+    "@srgssr/web-suite-utils": "^1.0.0"
   },
   "peerDependencies": {
     "video.js": "^8.0.0"
