feat: add Google cast sender plugin
Resolves #59 by introducing a new package that integrates Google Cast
functionality into the video.js player. This plugin allows users to stream video
content to a Chromecast device directly from the player.

Key features:
- **Casting Support**: enables casting of VOD and live streams with DVR.
- **Track Selection**: supports subtitle and audio track selection during casting.
- **Custom Source Resolution**: provides a `sourceResolver` option for custom source logic.
- **Default UI**: includes a default cast button that can be added to the control bar.
- **Customizable**: the receiver application ID and other options can be configured.

--- a/assets/extensions.json
+++ b/assets/extensions.json
@@ -42,5 +42,9 @@
   {
     "name": "svg-button",
     "description": "Base components that simplifies the process of adding custom SVG icons."
+  },
+  {
+    "name": "google-cast-sender",
+    "description": "A Chromecast plugin that supports supports subtitle and audio track selection, live streams with DVR capabilities and custom source resolution."
   }
 ]
